@@ -5,6 +5,8 @@
   - add SPVM::Data::Package
   - add to_string to SPVM::Data::Array
   - add SPVM::Data::String for SPVM string type
+  - add SPVM::new_string
+  - add SPVM::new_string_from_binary
 0.0390 2018-11-16
   - package variable must start upper case or contain ::
   - add SPVM::List module
